# networking-project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cliente.cpp  server.cpp  server.py  subs.py  verificar_instalacion.cpp
api-rest/: api.py
cpp/: CMakeLists.txt  node.cpp  sensor.cpp
cpp/src/: node.cpp  sensor.cpp
frontend/: app.js  index.html  styles.css
java/: build.gradle.kts
java/gradle/: libs.versions.toml
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/example/java/: Main.java
java/src/main/resources/: logback.xml
js/: eslint.config.mjs  package-lock.json  package.json  styles.css  svelte.config.js
js/src/: app.css  app.html
js/src/lib/: api.ts  config.ts  types.ts  utils.ts  websocket.ts
js/src/lib/components/: AlertPanel.svelte  Chart.svelte  DataTable.svelte  MetricCard.svelte
js/src/lib/utils/: randomColors.ts
js/src/routes/: +page.svelte
py/: api.py  requirements.txt  subs.py
